[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy_lightening"
authors = [{name = "Daniel Pepper"}]
dynamic = ["version"]
description = "making SQLAlchemy great again"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
  # https://pypi.python.org/pypi?%3Aaction=list_classifiers
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
requires-python = ">= 3.12"
keywords = ["sqlalchemy"]
dependencies = [
  "classproperties >= 0.2",
  "pluckit >= 0.6",
  "rekey >= 1.2",
  "sqlalchemy >= 2",
  "stringcase >= 1.2",
]

[project.optional-dependencies]
test = [
  "pytest >= 8.2",
]
lint = [
  "isort >= 5.13",
]

[project.urls]
Homepage = "https://github.com/dpep/sqlalchemy_lightening_py"

[tool.setuptools.dynamic]
version = {attr = "sqlalchemy_lightening.__version__"}
